AC_PREREQ([2.71])
AC_INIT([libpadding], [1.1.1], [zocker@10zen.eu])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([foreign subdir-objects])
LT_PREREQ([2.4])
LT_INIT
AC_CONFIG_MACRO_DIRS([m4])
AC_CONFIG_SRCDIR([src/padding.c])
AC_CONFIG_HEADERS([config.h])

AC_PROG_CC
AC_FUNC_MALLOC

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
